--- a/CoffeeCup/index.html
+++ b/CoffeeCup/index.html
@@ -160,14 +160,16 @@
     <div class="gift-voucher-page">
         <div class="voucher-border-box">
             <div class="row">
-                <div class=" gift-images col-xl-6 col-xs-12 col-sm-12 col-md-6 ">
+                <div class=" gift-images col-xl-6 col-lg-6 col-xs-12 col-sm-12 col-md-12 ">
                     <div class="blue-circle ">
                         <img class="img-fluid" src="img/coffeecup_logo.png">
                         <h1 class="myriad-pro-font">FREE</h1>
+                        <div class="leaf-pic">
+                            <img class="img-fluid " src="img/leaf.png">
+                        </div>
                     </div>
-                    <img class="img-fluid leaf-pic" src="img/leaf.png">
                 </div>
-                <div class="voucher-desc col-xl-6 col-xs-12 col-sm-12 col-md-6 ">
+                <div class="voucher-desc col-xl-6 col-lg-6 col-xs-12 col-sm-12 col-md-12 ">
                     <div class="italic-title">
                         <h1>Gift Voucher</h1>
                     </div>
@@ -222,10 +224,10 @@
         </div>
         <div class="testimonials">
             <div class="row">
-                <div class="col-xl-5 col-xs-12 col-sm-12 col-md-6 ">
-                    <img class="img-fluid" src="img/lady.png">
+                <div class="col-xl-5 col-xs-12 col-sm-12 col-lg-6 ">
+                    <img class="img-fluid w-100" src="img/lady.png">
                 </div>
-                <div class="col-xl-7 col-xs-12 col-sm-12 col-md-6 ">
+                <div class="col-xl-7 col-xs-12 col-sm-12 col-lg-6 ">
                     <div class="customer text-center">
                         <h1>John Peter</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -271,11 +273,9 @@
                 <h1>Our Branches</h1>
             </div>
             <div class="row">
-                <div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <div class="city-ny col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
                     <div class="cities-margin">
-
                         <div class="cities">
-
                             <img class="img-fluid w-100" src="img/new_york.png">
                             <div class="city-bubble">
                                 <h1>New York</h1>
@@ -291,11 +291,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <div class="city col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
                     <div class="cities-margin">
-
                         <div class="cities">
-
                             <img class="img-fluid w-100" src="img/texas.png">
                             <div class="city-bubble">
                                 <h1>Texas</h1>
@@ -311,9 +309,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <div class="city-nj col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
                     <div class="cities-margin">
-
                         <div class="cities">
                             <img class="img-fluid w-100" src="img/new_jersey.png">
                             <div class="city-bubble">
@@ -354,10 +351,8 @@
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <div class="middle-footer">
                     <h2 class="myriad-pro-font mb-sm-0 mb-lg-5">Information.</h2>
-                    <div style="list-style-type:none;">
-                        <p>
-                            <a href="" class="text-reset">About Us</a>
-                        </p>
+                    <div class="info_p">
+                        <p><a href="" class="text-reset">About Us</a></p>
                         <p><a href="" class="text-reset">Branches</a></p>
                         <p><a href="" class="text-reset">Menu</a></p>
                         <p><a href="" class="text-reset">Contact</a></p>
